--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@splidejs/splide": "^4.1.4",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "animejs": "^3.2.2",
+    "framer-motion": "^11.3.21",
     "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.417.0",
