--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "swiper": "^11.1.9",
+    "swiper-react": "^1.0.0"
   },
   "devDependencies": {
     "@types/animejs": "^3.1.12",
