--- a/client/tsconfig.node.json
+++ b/client/tsconfig.node.json
@@ -2,9 +2,12 @@
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
+   "typeRoots": [
+      "./node_modules/@types"
+    ],
+    "moduleResolution": "node",
     "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "noEmit": true
