--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -7,15 +7,17 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "typeRoots": ["./node_modules/@types", "./src/types"],
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "moduleResolution": "node",
+   "typeRoots": ["./node_modules/@types", "./src/types"],
+
+
+    /* Adjusted for better compatibility */
+    "moduleResolution": "node", // Changed from 'bundler' to 'node' for standard module resolution
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
+
+    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
