--- a/client/tsconfig.node.json
+++ b/client/tsconfig.node.json
@@ -1,26 +1,16 @@
 {
   "compilerOptions": {
     "composite": true,
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
+   "typeRoots": [
+      "./node_modules/@types"
+    ],
+    "moduleResolution": "node",
     "skipLibCheck": true,
-    "typeRoots": ["./node_modules/@types", "./src/types"],
-
-    /* Adjusted for better compatibility */
-    "moduleResolution": "node", // Changed from 'bundler' to 'node' for standard module resolution
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-
-    /* Linting */
+    "module": "ESNext",
+    "allowSyntheticDefaultImports": true,
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noEmit": true
   },
-  "include": ["src"]
+  "include": ["vite.config.ts"]
 }
