--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -7,6 +7,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
    "typeRoots": ["./node_modules/@types", "./src/types"],
 
 
