--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.417.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-intersection-observer": "^9.13.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.25.1",
