--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-intersection-observer": "^9.13.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.25.1",
+    "react-tooltip": "^5.28.0",
     "swiper": "^11.1.9",
     "swiper-react": "^1.0.0"
   },
